Galleri: Fikset så alle linker/urls er bygget vha {% url %}. Fikset også en del inkonsistenthet i koden.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,22 @@
 *.pyc
 *.swp
+/nablaweb/gallery/forms.py~
+/nablaweb/gallery/models.py~
+/nablaweb/gallery/urls.py~
+/nablaweb/gallery/views.py~
+/nablaweb/settings.py~
+/nablaweb/templates/content/content_confirm_delete.html~
+/nablaweb/templates/gallery/add_album.html~
+/nablaweb/templates/gallery/add_picture.html~
+/nablaweb/templates/gallery/album_confirm_delete.html~
+/nablaweb/templates/gallery/album.html~
+/nablaweb/templates/gallery/delete_picture.html~
+/nablaweb/templates/gallery/edit_album.html~
+/nablaweb/templates/gallery/edit_picture.html~
+/nablaweb/templates/gallery/index.html~
+/nablaweb/templates/gallery/new_image_form2.html~
+/nablaweb/templates/gallery/new_image_form.html~
+/nablaweb/templates/gallery/picture_large.html~
+/nablaweb/templates/index.html~
+/nablaweb/urls.py~
+/nablaweb/nabla_development.db
