Kommentarer på news og events. Installert Bootstrap 2.0
* Laget template for kommentar-form og kommentar-visning
* Oppdatert fra Bootstrap 2.0b til 2.0. Det fører til at noen småting
  brekker, f.eks. farger som er customized og ikoner. Vi bør bruke
  LESS-versjonen for enklere redigering.
* Fikset utseendet på MathJax inni Markdown
* Skrevet hvordan bruke Markdown/Mathjax ved kommentar-feltet.

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@ sqlite.db
 # Media-mapper (opplastede brukerbilder o.l.)
 media/
 
+# Mappe som blir laget av pip av og til
+build/
+
 # Disse genereres ved å kjøre ./manage.py generatemedia
 # (Kun nødvendig for production)
 nablaweb/_generated_media/
