Smårusk. Effektivisert random_quote.
* Lagt Bootstrap-assets til i gitignore
* Brukt en smartere metode enn ORDER BY RANDOM() LIMIT 1 i
  get_random_item
* Gjort at news_list ikke kræsjer hvis et bilde ikke eksisterer

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ sqlite.db
 
 # Filer som genereres lokalt
 dependencies/twitter-bootstrap/bootstrap
+dependencies/twitter-bootstrap/docs/assets
 
 # Media-mapper (opplastede brukerbilder o.l.)
 media/
