--- a/dependencies/twitter-bootstrap/Makefile
+++ b/dependencies/twitter-bootstrap/Makefile
@@ -9,17 +9,17 @@ WATCHR ?= `which watchr`
 # BUILD DOCS
 #
 
-docs: bootstrap
-	rm docs/assets/bootstrap.zip
-	zip -r docs/assets/bootstrap.zip bootstrap
-	rm -r bootstrap
-	lessc ${BOOTSTRAP_LESS} > ${BOOTSTRAP}
-	lessc ${BOOTSTRAP_RESPONSIVE_LESS} > ${BOOTSTRAP_RESPONSIVE}
-	node docs/build
-	cp img/* docs/assets/img/
-	cp js/*.js docs/assets/js/
-	cp js/tests/vendor/jquery.js docs/assets/js/
-	cp js/tests/vendor/jquery.js docs/assets/js/
+# docs: bootstrap
+# 	rm docs/assets/bootstrap.zip
+# 	zip -r docs/assets/bootstrap.zip bootstrap
+# 	rm -r bootstrap
+# 	lessc ${BOOTSTRAP_LESS} > ${BOOTSTRAP}
+# 	lessc ${BOOTSTRAP_RESPONSIVE_LESS} > ${BOOTSTRAP_RESPONSIVE}
+# 	node docs/build
+# 	cp img/* docs/assets/img/
+# 	cp js/*.js docs/assets/js/
+# 	cp js/tests/vendor/jquery.js docs/assets/js/
+# 	cp js/tests/vendor/jquery.js docs/assets/js/
 
 #
 # BUILD SIMPLE BOOTSTRAP DIRECTORY
