Fjernet symlinket mappe -- les static/README.md for å fikse admin-static
Dette fordi:

    1. Hver enkelt fil hadde blitt symlinket, fremfor en mappe

    2. Adressen symlinken peker på er forskjellig fra maskin til maskin,
       og ved forskjellige python-versjon.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@
 *.swp
 *.swo
 
+# Symlinks som er forskjellige fra system til system
+static/admin/
+static/admin
+
 # Personlige settings
 nablaweb/settings.py
 nablaweb/wsgi.py
