--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 *.swp
 *.swo
 
+# Symlinks som er forskjellige fra system til system
+static/admin/
+
 # Personlige settings
 nablaweb/settings.py
 nablaweb/wsgi.py
