--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,8 @@ pybbm-tbw
 south
 git+https://github.com/toastdriven/django-haystack.git@master#egg=django-haystack
 sorl-thumbnail
-whoosh
+whoosh<2.5
+PIL
 mysql-python
 python-memcached
 django-debug-toolbar
