Lagt til markdown-urlize i requirements.txt
Bruker https://github.com/DataDog/markdown-urlize

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,5 @@ mysql-python
 python-memcached
 django-debug-toolbar
 django-cache-panel
+
+git+https://github.com/DataDog/markdown-urlize#egg=markdown_urlize
