--- a/requirements.txt
+++ b/requirements.txt
@@ -10,5 +10,5 @@ mysql-python
 python-memcached
 django-debug-toolbar
 django-cache-panel
-
+easy-thumbnails
 git+https://github.com/DataDog/markdown-urlize#egg=markdown_urlize
