Lagt til mappen virtualenv i gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ nablaweb/nablaweb/settings/local.py
 # Egen mappe for variabelt innhold (media, log, database etc.
 var/
 
+# Virtualenv
+virtualenv/
