Lagt til en fabfile for å forenkle oppsett av devserver.

--- a/deploy_tools/supervisor-gunicorn-template.conf
+++ b/deploy_tools/supervisor-gunicorn-template.conf
@@ -2,7 +2,7 @@
 user = nabla_no
 directory = /websites/nabla.no/nablaweb
 environment = DJANGO_SETTINGS_MODULE="nablaweb.settings.local"
-command = /websites/nabla.no/env/bin/gunicorn nablaweb.wsgi:application --bind unix:/tmp/gunicorn_nabla_no.socket
+command = /websites/nabla.no/venv/bin/gunicorn nablaweb.wsgi:application --bind unix:/tmp/gunicorn_nabla_no.socket
 
 stdout_logfile = /websites/nabla.no/var/logs/gunicorn_supervisor.log
 stderr_logfile = /websites/nabla.no/var/logs/gunicorn_supervisor_stderr.log
