--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 *.swo
 
 # Personlige settings
-nablaweb/nablaweb/settings/local.py
+nablaweb/settings/local.py
 
 # Egen mappe for variabelt innhold (media, log, database etc.
 var/
