--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,6 @@
 #
 -e git+https://bitbucket.org/webkom/bpc_client.git#egg=bpc_client
 -e git+https://bitbucket.org/webkom/content-app.git#egg=content
--e git+git://github.com/django-wiki/django-wiki.git#egg=wiki
 click==6.3                # via pip-tools
 django-appconf==1.0.1     # via django-image-cropping
 django-bootstrap3==7.0.0
@@ -19,20 +18,22 @@ django-grappelli==2.7.3
 django-haystack==2.4.1
 django-image-cropping==1.0.3
 django-markdown-deux==1.0.5
-django-mptt==0.8.3
-django-nyt==0.9.9
+django-mptt==0.8.3        # via wiki
+django-nyt==0.9.9         # via wiki
 django-sekizai==0.9.0
 django==1.9.3
 easy-thumbnails==2.3
 first==2.0.1              # via pip-tools
 markdown2==2.3.0          # via django-markdown-deux
-markdown==2.6.5
-Pillow==3.1.1             # via easy-thumbnails
+markdown==2.6.5           # via wiki
+Pillow==3.1.1             # via easy-thumbnails, wiki
 pip-tools==1.6
 PyMySQL==0.7.2
 python3-memcached==1.51
 pytz==2015.7
-six==1.10.0               # via django-appconf, django-bower, django-braces, django-nyt, pip-tools
-sorl-thumbnail==12.3
+six==1.10.0               # via django-appconf, django-bower, django-braces, django-nyt, pip-tools, wiki
+sorl-thumbnail==12.3      # via wiki
+South==1.0.2              # via wiki
 Wand==0.4.2
 whoosh==2.7.2
+wiki==0.1
