--- a/requirements.in
+++ b/requirements.in
@@ -11,7 +11,7 @@
 pip-tools
 
 # django pinned to the major version we are using.
-django~=1.9
+django>=1.8,<1.9
 
 # Misc django packages
 django-bootstrap3
