--- a/requirements.in
+++ b/requirements.in
@@ -44,4 +44,4 @@ python3-memcached
 -e git+https://bitbucket.org/webkom/content-app.git#egg=content
 -e git+https://bitbucket.org/webkom/bpc_client.git#egg=bpc_client
 
-loremipsum
+faker
