--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@
 -e git+https://bitbucket.org/webkom/bpc_client.git#egg=bpc_client
 -e git+https://bitbucket.org/webkom/content-app.git#egg=content
 -e git+https://github.com/nablawebkom/django-wiki#egg=wiki
+bleach==1.5.0
 click==6.3                # via pip-tools
 django-appconf==1.0.1     # via django-image-cropping
 django-bootstrap3==7.0.0
@@ -19,23 +20,23 @@ django-grappelli==2.7.3
 django-haystack==2.4.1
 django-image-cropping==1.0.3
 django-markdown-deux==1.0.5
-django-mptt==0.8.3        # via wiki
-django-nyt==0.9.9         # via wiki
-django-sekizai==0.9.0
+django-mptt==0.8.7
+django-nyt==1.0b1
+django-sekizai==0.10.0
 django==1.8.12
 easy-thumbnails==2.3
 faker==0.7.3
 first==2.0.1              # via pip-tools
+gunicorn==19.7.0
+html5lib==0.9999999       # via bleach
 markdown2==2.3.0          # via django-markdown-deux
-markdown==2.6.5           # via wiki
-Pillow==3.1.1             # via easy-thumbnails, wiki
+markdown==2.6.5
+pillow==3.1.1
 pip-tools==1.6
-PyMySQL==0.7.2
+pymysql==0.7.2
 python-dateutil==2.5.3    # via faker
-python3-memcached==1.51
 pytz==2015.7
-six==1.10.0               # via django-appconf, django-bower, django-braces, django-nyt, faker, pip-tools, python-dateutil, wiki
-sorl-thumbnail==12.3      # via wiki
-South==1.0.2              # via wiki
-Wand==0.4.2
+six==1.10.0               # via bleach, django-appconf, django-bower, django-braces, django-nyt, faker, html5lib, pip-tools, python-dateutil
+sorl-thumbnail==12.3
+wand==0.4.2
 whoosh==2.7.2
