--- a/requirements.txt
+++ b/requirements.txt
@@ -8,36 +8,39 @@
 -e git+https://bitbucket.org/webkom/content-app.git#egg=content
 -e git+https://bitbucket.org/webkom/django-wiki.git#egg=wiki
 bleach==1.5.0
-click==6.3                # via pip-tools
+click==6.7                # via pip-tools
 django-appconf==1.0.1     # via django-image-cropping
-django-bootstrap3==7.0.0
-django-bower==5.1.0
-django-braces==1.8.1
-django-classy-tags==0.7.2  # via django-sekizai
-django-contrib-comments==1.6.2
-django-filebrowser==3.6.1
-django-grappelli==2.7.3
-django-haystack==2.4.1
-django-image-cropping==1.0.3
+django-bootstrap3==9.0.0
+django-bower==5.2.0
+django-braces==1.11.0
+django-classy-tags==0.8.0  # via django-sekizai
+django-contrib-comments==1.8.0
+django-filebrowser==3.9.1
+django-grappelli==2.10.1
+django-haystack==2.6.1
+django-image-cropping==1.1.0
 django-markdown-deux==1.0.5
 django-mptt==0.8.7
-django-nyt==1.0b1
+django-nyt==1.0b5
 django-sekizai==0.10.0
-django==1.8.12
-easy-thumbnails==2.3
-faker==0.7.3
+django==1.9.13
+dnspython==1.15.0         # via email-validator
+easy-thumbnails==2.4.1
+email-validator==1.0.2    # via faker
+faker==0.8.3
 first==2.0.1              # via pip-tools
-gunicorn==19.7.0
+gunicorn==19.7.1
 html5lib==0.9999999       # via bleach
-markdown2==2.3.0          # via django-markdown-deux
-markdown==2.6.5
+idna==2.6                 # via email-validator
+markdown2==2.3.4          # via django-markdown-deux
+markdown==2.6.9
 olefile==0.44             # via pillow
-pillow==4.2.1             # via easy-thumbnails
-pip-tools==1.6
-pymysql==0.7.2
-python-dateutil==2.5.3    # via faker
-pytz==2015.7
-six==1.10.0               # via bleach, django-appconf, django-bower, django-braces, django-nyt, faker, html5lib, pip-tools, python-dateutil
+pillow==4.2.1
+pip-tools==1.9.0
+pymysql==0.7.11
+python-dateutil==2.6.1    # via faker
+pytz==2017.2
+six==1.10.0               # via bleach, django-appconf, django-bower, django-image-cropping, django-nyt, faker, html5lib, pip-tools, python-dateutil
 sorl-thumbnail==12.3
-wand==0.4.2
-whoosh==2.7.2
+wand==0.4.4
+whoosh==2.7.4
