--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,9 @@
 #
 #    pip-compile --output-file requirements.txt requirements.in
 #
--e git+https://bitbucket.org/webkom/bpc_client.git#egg=bpc_client
--e git+https://bitbucket.org/webkom/content-app.git#egg=content
--e git+https://bitbucket.org/webkom/django-wiki.git#egg=wiki
+-e git+https://bitbucket.org/webkom/bpc_client.git@556ede6bd15b4296b1f2a29730ad6e5f00b27428#egg=bpc_client
+-e git+https://bitbucket.org/webkom/content-app.git@27fa0af752822fdd6e00da14615a632711ef233e#egg=content
+-e git+https://bitbucket.org/webkom/django-wiki.git@0c41490d293a28d2e08c1252336672ad7bc4be85#egg=wiki
 bleach==1.5.0
 click==6.7                # via pip-tools
 django-appconf==1.0.1     # via django-image-cropping
@@ -35,7 +35,7 @@ idna==2.6                 # via email-validator
 markdown2==2.3.4          # via django-markdown-deux
 markdown==2.6.9
 olefile==0.44             # via pillow
-pillow==4.2.1
+pillow==4.2.1             # via easy-thumbnails
 pip-tools==1.9.0
 pymysql==0.7.11
 python-dateutil==2.6.1    # via faker
