Switch to using django-wiki from pypi and upgrade to newer version (0.3b3)
People were having problems editing pages on the django-wiki.
I was because of some template error somewhere.

I suspect it had to do with our upgrade to django 1.11, because
it says on django-wikis github page that django-wiki 0.2 don't support
django 1.11.

Fixing this by upgrading to beta version of 0.3.
In the process I have reverted to using django-wiki from pypi instead
of our fork of it.

I have never seen the need for having our own fork of django-wiki.
If we need the extra plugins that were added to our fork then we should
put it in a different python package and git repository.

--- a/requirements.in
+++ b/requirements.in
@@ -27,10 +27,8 @@ gunicorn    # Web-server used to run django
 PyMySQL     # Database bindings for mysql
 Wand        # python bindings for ImageMagick. Needs ImageMagick installed on machine to work.
 whoosh      # Backend for django-haystack
+wiki~=0.3b3
 
-
-# Fork of django-wiki
--e git+https://bitbucket.org/webkom/django-wiki.git@0c41490d293a28d2e08c1252336672ad7bc4be85#egg=wiki
 
 # Python packages developed by webkom
 -e git+https://bitbucket.org/webkom/content-app.git@1e451bfd956fcdbfa8df2d5bb834137e2819752a#egg=content
