--- a/Pipfile
+++ b/Pipfile
@@ -5,18 +5,19 @@ name = "pypi"
 
 [packages]
 django = "==1.11.5"
-"django-bootstrap3" = "*"   # Templatetags for bootstrap3
-"django-bower" = "*"        # Frontend/staticfiles packagemanager
-"django-braces" = "*"       # Extra mixinclasses for models and views
-"django-contrib-comments" = "*"
-"django-filebrowser" = "*"  # Filebrowser for mediafiles.
-"django-haystack" = "*"     # Search functionality for django models. See whoosh as well
-"django-image-cropping" = "*"
-"django-markdown-deux" = "*"
-"django-sekizai" = "*"      # Templatetag library for extra block functionality
-"easy-thumbnails" = "*"     # Thumbnail creator
+django-bootstrap3 = "*"   # Templatetags for bootstrap3
+django-bower = "*"        # Frontend/staticfiles packagemanager
+django-braces = "*"       # Extra mixinclasses for models and views
+django-contrib-comments = "*"
+django-filebrowser = "*"  # Filebrowser for mediafiles.
+django-haystack = "*"     # Search functionality for django models. See whoosh as well
+django-hitcount = "*"
+django-image-cropping = "*"
+django-markdown-deux = "*"
+django-sekizai = "*"      # Templatetag library for extra block functionality
+easy-thumbnails = "*"     # Thumbnail creator
 faker = "*"                 # Fake data generator, used in tests.
-"factory-boy" = "*"         # For creating many objects for testing (seed)
+factory-boy = "*"         # For creating many objects for testing (seed)
 gunicorn = "*"              # Web-server used to run django
 pymysql = "*"               # Database bindings for mysql
 wand = "*"                  # Python bindings for ImageMagick. Needs ImageMagick installed
@@ -24,7 +25,6 @@ whoosh = "*"                # Backend for django-haystack
 wiki = "==0.3b3"
 content = {editable = true, ref = "1e451bfd956fcdbfa8df2d5bb834137e2819752a", git = "https://bitbucket.org/webkom/content-app.git"}
 bpc-client = {editable = true, ref = "556ede6bd15b4296b1f2a29730ad6e5f00b27428", git = "https://bitbucket.org/webkom/bpc_client.git"}
-django-hitcount = "*"
 
 [dev-packages]
 
