Remove bower, use npm instead.
This commit removes the usage of bower to install frontend-packages,
and replaces it with npm.
This is because bower is deprecated.

This means that we now have to run
```
manage.py npminstall
```
instead of
```
manage.py bower_install
```.

And we don't need to install bower.

--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,6 @@ name = "pypi"
 [packages]
 django = "==1.11.5"
 django-bootstrap3 = "*"   # Templatetags for bootstrap3
-django-bower = "*"        # Frontend/staticfiles packagemanager
 django-braces = "*"       # Extra mixinclasses for models and views
 django-contrib-comments = "*"
 django-filebrowser = "*"  # Filebrowser for mediafiles.
@@ -25,6 +24,7 @@ whoosh = "*"                # Backend for django-haystack
 wiki = "~=0.3.0"
 content = {editable = true, ref = "a510e617279c8ef457c2643ff1151df52dbc278f", git = "https://bitbucket.org/webkom/content-app.git"}
 bpc-client = {editable = true, ref = "556ede6bd15b4296b1f2a29730ad6e5f00b27428", git = "https://bitbucket.org/webkom/bpc_client.git"}
+django-node-assets = "*"
 
 [dev-packages]
 pylint = "*"
