Changed the ingress and body admin windows.

--- a/Pipfile
+++ b/Pipfile
@@ -25,6 +25,7 @@ wiki = "~=0.3.0"
 content = {editable = true, ref = "abfe165328664dfbc84bd04768f4e6595a5c023c", git = "https://bitbucket.org/webkom/content-app.git"}
 bpc-client = {editable = true, ref = "556ede6bd15b4296b1f2a29730ad6e5f00b27428", git = "https://bitbucket.org/webkom/bpc_client.git"}
 django-node-assets = "*"
+django-ckeditor = "*"
 
 [dev-packages]
 pylint = "*"
