Change Django filebrowser dependency

--- a/Pipfile
+++ b/Pipfile
@@ -8,7 +8,7 @@ django = "~=2.1.0"
 django-bootstrap3 = "*"   # Templatetags for bootstrap3
 django-braces = "*"       # Extra mixinclasses for models and views
 django-contrib-comments = "*"
-django-filebrowser = "*"  # Filebrowser for mediafiles.
+django-filebrowser-no-grappelli = "*"  # Filebrowser for mediafiles.
 django-haystack = "*"     # Search functionality for django models. See whoosh as well
 django-hitcount = "*"
 django-image-cropping = "*"
