Initial app commit
Creates new app "qrTickets" and installs external app "django-qr-code"

--- a/Pipfile
+++ b/Pipfile
@@ -22,9 +22,10 @@ pymysql = "*"               # Database bindings for mysql
 wand = "*"                  # Python bindings for ImageMagick. Needs ImageMagick installed
 whoosh = "*"                # Backend for django-haystack
 wiki = "~=0.4.0"
-bpc-client = {editable = true, ref = "556ede6bd15b4296b1f2a29730ad6e5f00b27428", git = "https://bitbucket.org/webkom/bpc_client.git"}
+bpc-client = {editable = true,ref = "556ede6bd15b4296b1f2a29730ad6e5f00b27428",git = "https://bitbucket.org/webkom/bpc_client.git"}
 django-node-assets = "*"
 markdown = "*"
+django-qr-code = "*"
 
 [dev-packages]
 pylint = "*"
