Adds basic functionality for qrtickets
includes a basic view and form for generating tickets, a dummy view for registering
tickets, and also adds an external app for generating QR-codes.

--- a/Pipfile
+++ b/Pipfile
@@ -26,6 +26,7 @@ bpc-client = {editable = true,ref = "556ede6bd15b4296b1f2a29730ad6e5f00b27428",g
 django-node-assets = "*"
 markdown = "*"
 django-qr-code = "*"
+django-multi-email-field = "*"
 
 [dev-packages]
 pylint = "*"
