Updating FontAwesome version from 4 to 5
-Changed FontAwesome supplier to @fortawesome/fontawesome-free
-Updated old icons to the new format

This breaks some icons in django-wiki which still uses FontAwesome 4

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^3.4.1",
-    "font-awesome": "^4.7.0",
+    "@fortawesome/fontawesome-free": "^5.11.0",
     "jquery": "^3.4.1",
     "requirejs": "^2.3.6"
   }
