--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "private": true,
   "dependencies": {
-    "bootstrap": "^3.4.1",
     "@fortawesome/fontawesome-free": "^5.11.0",
+    "bootstrap": "^3.4.1",
     "jquery": "^3.4.1",
-    "requirejs": "^2.3.6"
+    "requirejs": "^2.3.6",
+    "waypoints": "^4.0.1"
   }
 }
