--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
     "@fortawesome/fontawesome-free": "^5.11.0",
     "bootstrap": "^3.4.1",
     "jquery": "^3.4.1",
-    "requirejs": "^2.3.6",
-    "waypoints": "^4.0.1"
+    "requirejs": "^2.3.6"
   }
 }
