--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "==2.1.13"
+django = "==2.2.9"
 django-bootstrap3 = "*"   # Templatetags for bootstrap3
 django-braces = "*"       # Extra mixinclasses for models and views
 django-contrib-comments = "*"
@@ -21,12 +21,13 @@ gunicorn = "*"              # Web-server used to run django
 pymysql = "*"               # Database bindings for mysql
 wand = "*"                  # Python bindings for ImageMagick. Needs ImageMagick installed
 whoosh = "*"                # Backend for django-haystack
-wiki = "~=0.4.0"
 bpc-client = {editable = true,ref = "556ede6bd15b4296b1f2a29730ad6e5f00b27428",git = "https://bitbucket.org/webkom/bpc_client.git"}
 django-node-assets = "*"
 markdown = "*"
 django-qr-code = "*"
 django-multi-email-field = "*"
+bleach = "==2.1.4"
+wiki = "*"
 
 [dev-packages]
 pylint = "*"
