Adds flake8 to Pipfile

--- a/Pipfile
+++ b/Pipfile
@@ -27,6 +27,7 @@ django-node-assets = "*"
 markdown = "*"
 django-qr-code = "*"
 django-multi-email-field = "*"
+flake8 = "*"
 black = "==19.10b0"
 isort = "*"
 
