--- a/Pipfile
+++ b/Pipfile
@@ -21,7 +21,7 @@ gunicorn = "*"              # Web-server used to run django
 pymysql = "*"               # Database bindings for mysql
 wand = "*"                  # Python bindings for ImageMagick. Needs ImageMagick installed
 whoosh = "*"                # Backend for django-haystack
-wiki = "==0.6b1"
+wiki = "==0.6"
 bpc-client = {editable = true,ref = "556ede6bd15b4296b1f2a29730ad6e5f00b27428",git = "https://bitbucket.org/webkom/bpc_client.git"}
 django-node-assets = "*"
 markdown = "*"
