--- a/Pipfile
+++ b/Pipfile
@@ -25,6 +25,7 @@ markdown = "*"
 django-qr-code = "*"
 django-multi-email-field = "*"
 django-bootstrap4 = "*"
+django-ckeditor = "*"
 djangorestframework = "*"
 
 [dev-packages]
