Installs django REST and readies API endpoints for ticket scanning.

--- a/Pipfile
+++ b/Pipfile
@@ -25,6 +25,7 @@ markdown = "*"
 django-qr-code = "*"
 django-multi-email-field = "*"
 django-bootstrap4 = "*"
+djangorestframework = "*"
 
 [dev-packages]
 faker = "*"               # Fake data generator, used in tests.
