--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "bootstrap": "^4.4.1",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
-    "requirejs": "^2.3.6"
+    "requirejs": "^2.3.6",
+    "vue": "^3.0.0",
+    "vue-qrcode-reader": "^2.3.13"
   }
 }
