--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -52,11 +52,13 @@ jobs:
     - name: Allow reading and writing PDFs (linux only)
       # Edit imagemagick's policy file to allow reading and writing PDFs
       # This is needed to create Nablad instances, which is done during testing
+      # Also install ghostscript, which imagemagick uses to read/write PDFs
       if: runner.os == 'Linux'
       run: |
         configure_path=$(convert -list configure | sed -n -e 's/CONFIGURE_PATH[[:space:]]*//p' || true)
         # sed -i is a gnu extension. Beware
         sudo sed -i -e 's/<policy domain="coder" rights=".*" pattern="PDF" \/>/<policy domain="coder" rights="read | write" pattern="PDF" \/>/' "$configure_path/policy.xml"
+        sudo apt-get install ghostscript
 
     - name: Exclude tests that need ImageMagick (non-linux)
       # ImageMagick does not come pre-installed on mac- and windows runners, so we skip
