Do not fail fast
This probably makes the output of the tests more helpful in case of a
failure

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -9,6 +9,7 @@ jobs:
       PIPENV_VENV_IN_PROJECT: true
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macOS-latest]
         python_version: [3.6]
