--- a/Pipfile
+++ b/Pipfile
@@ -11,7 +11,7 @@ django-contrib-comments = "*"
 django-filebrowser-no-grappelli = "*"  # Filebrowser for mediafiles.
 django-haystack = "==3.0b1"     # Search functionality for django models. See whoosh as well
 django-hitcount = "*"
-django-image-cropping = "*"
+django-image-cropping = "==1.5"
 django-markdown-deux = "*"
 django-sekizai = "*"      # Templatetag library for extra block functionality
 easy-thumbnails = "*"     # Thumbnail creator
