apt-get update before installing ghostscript
Had some intermittent issues with old databases

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -70,6 +70,7 @@ jobs:
           cat "$configure_path/policy.xml"
           exit 1
         fi
+        sudo apt-get update
         sudo apt-get install ghostscript
 
     - name: Exclude tests that need ImageMagick (non-linux)
