fix: updated Pipfile format for dev-packages

--- a/Pipfile
+++ b/Pipfile
@@ -34,8 +34,8 @@ faker = "*"               # Fake data generator, used in tests.
 factory-boy = "*"         # For creating many objects for testing (seed)
 # Linting tools
 black = "*"
-isort = "5.9.3"
-flake8 = "3.9.2"
+isort = "==5.9.3"
+flake8 = "==3.9.2"
 pylint = ">=2.6"
 pylint-django = "*"
 bandit = "*"
