update: updated haystack and imagecropper to be compatible with django-4.0

--- a/Pipfile
+++ b/Pipfile
@@ -9,9 +9,9 @@ django = "==3.2.*"
 django-braces = "*"       # Extra mixinclasses for models and views
 django-contrib-comments = "*"
 django-filebrowser-no-grappelli = "*"  # Filebrowser for mediafiles.
-django-haystack = "==3.0b1"     # Search functionality for django models. See whoosh as well
+django-haystack = "==3.2"     # Search functionality for django models. See whoosh as well
 django-hitcount = "*"
-django-image-cropping = "==1.5"
+django-image-cropping = "==1.7"
 django-markdown-deux = "*"
 django-sekizai = "*"      # Templatetag library for extra block functionality
 easy-thumbnails = "*"     # Thumbnail creator
