--- a/Pipfile
+++ b/Pipfile
@@ -33,9 +33,9 @@ pre-commit = "*"
 faker = "*"               # Fake data generator, used in tests.
 factory-boy = "*"         # For creating many objects for testing (seed)
 # Linting tools
-black = "*"
-isort = "==5.9.3"
-flake8 = "==3.9.2"
+black = "==24.3.0"
+isort = "==5.13.2"
+flake8 = "==7.0.0"
 pylint = ">=2.6"
 pylint-django = "*"
 bandit = "*"
