--- a/Pipfile
+++ b/Pipfile
@@ -25,7 +25,7 @@ markdown = "*"
 django-qr-code = "*"
 django-multi-email-field = "*"
 django-bootstrap4 = "*"
-django-ckeditor = "*"
+django-ckeditor = "5.*"
 djangorestframework = "*"
 
 [dev-packages]
