--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -57,7 +57,7 @@ jobs:
       # Also install ghostscript, which imagemagick uses to read/write PDFs
       if: runner.os == 'Linux'
       run: |
-        configure_path=$(convert -list configure | sed -n -e 's/CONFIGURE_PATH[[:space:]]*//p' || true)
+        configure_path=$(magick convert -list configure | sed -n -e 's/CONFIGURE_PATH[[:space:]]*//p' || true)
         temp_file="$(sudo mktemp)"
 
         # sed -i is a gnu extension. Beware
