--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -57,8 +57,8 @@ jobs:
       # Also install ghostscript, which imagemagick uses to read/write PDFs
       if: runner.os == 'Linux'
       run: |
-        sudo apt install imagemagick
-        configure_path=$(magick convert -list configure | sed -n -e 's/CONFIGURE_PATH[[:space:]]*//p' || true)
+        sudo apt install imagemagick-6.q16
+        configure_path=$(convert -list configure | sed -n -e 's/CONFIGURE_PATH[[:space:]]*//p' || true)
         temp_file="$(sudo mktemp)"
 
         # sed -i is a gnu extension. Beware
