--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -63,6 +63,11 @@ jobs:
 
         # sed -i is a gnu extension. Beware
         sudo sed -i -e 's/<policy domain="coder" rights=".*" pattern="PDF" \/>/<policy domain="coder" rights="read | write" pattern="PDF" \/>/w '"$temp_file" "$configure_path/policy.xml"
+        echo
+        echo $temp_file
+        echo
+        cat $temp_file
+        echo
         if [ ! -s "$temp_file" ]; then
           echo 'Failed to edit policy file to allow reading/writing PDFs!'
           echo 'Below are the contents of `policy.xml`'
